# Mender-Rust

./: .gitignore  Cargo.toml  Readme.md
.cargo/: config
dummies/: mender.conf  private-key-rsa.key  private.key  private.pem  public-key-rsa.key
src/: authevent.rs  bootflags.rs  client.rs  main.rs  syncevent.rs
