[package]
name = "mender-rust"
version = "0.1.0"
authors = ["Ole Petter <olepor@matnat.uio.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } # Derive Deserialization for the config struct
serde_json = "1" # serde_json
base64 = "0.10"
http = "0.1.18"
rsa = "0.1.3"
# openssl = { version = "0.10", features = ["vendored"] }
openssl = "0.10.24"