[package]
name = "mender-rust"
version = "0.1.1"
authors = ["Ole Petter <olepor@matnat.uio.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0", features = ["derive"] } # Derive Deserialization for the config struct
serde_json = "1" # serde_json
base64 = "0.10"
reqwest = "0.9"
rsa = "0.1.4"
log = "0.4.7"
simple_logger = "1.3.0"
hex = "0.3.2"
# openssl = { version = "0.10", features = ["vendored"] }
openssl = "0.10"
mender_artifact = "0.1.2"
# ma = { version = "0.1.1", package = "mender_artifact"  }

